Prepare to publish talk

--- a/index.html
+++ b/index.html
@@ -4,20 +4,24 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>reveal.js</title>
+		<title>Write What You Know</title>
 
 		<link rel="stylesheet" href="dist/reset.css">
 		<link rel="stylesheet" href="dist/reveal.css">
-		<link rel="stylesheet" href="dist/theme/black.css">
+		<link rel="stylesheet" href="dist/theme/solarized.css">
 
 		<!-- Theme used for syntax highlighted code -->
-		<link rel="stylesheet" href="plugin/highlight/monokai.css">
+		<link rel="stylesheet" href="plugin/highlight/zenburn.css">
 	</head>
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>Slide 1</section>
-				<section>Slide 2</section>
+				<section>
+					<h3>Write what you know: Enabling open, collaborative publications with commercial tools</h3>
+					<h4>Society for Classical Studies Annual Meeting 2024, Chicago, IL</h4>
+					<h5>Charles Pletcher (University of Lausanne) · 6 January 2024 </h5>
+				</section>
+				<section data-markdown="write-what-you-know.md"></section>
 			</div>
 		</div>
 
